# cartpole-lqr

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: cart_pole.hpp  lqr_controller.hpp  simulator.hpp
scripts/: run_sim.py
src/: cart_pole.cpp  lqr_controller.cpp  main.cpp  simulator.cpp
